modified index page

--- a/shortener/templates/index.html
+++ b/shortener/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 <!-- Home page -->
 <div class="container">
-    <!-- For authenticated user -->>
+    <!-- For authenticated user -->
     {% if current_user.is_authenticated %}
         <section class="section">
             <div class="section-a">
